<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prayer</string>
    <string name="title_prayer_time">Prayer Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    
	<string name="location_setting_title">Change Location</string>
	
	<string name="upcoming_prayer">Upcoming Prayer</string>
	
	<string name="search_location">Search location</string>
	<string name="use_current_location">Use current location</string>
	
	<string name="prayer_imsak_name">Imsak</string>
	<string name="prayer_fajr_name">Fajr</string>
	<string name="prayer_dhuhr_name">Dhuhr</string>
	<string name="prayer_asr_name">Asr</string>
	<string name="prayer_maghrib_name">Maghrib</string>
	<string name="prayer_isha_name">Isha</string>
	
	<string name="menu_settings">Settings</string>
	<string name="pref_disable_notification">Disable notification</string>
    <string name="pref_disable_notification_summary">Turn off all notification</string>
    <string name="pref_language">Language</string>
    <string name="pref_calculation_method">Calculation method</string>
    <string name="pref_asr_method">Asr method</string>
    
    <string name="pref_general">General</string>
    <string name="pref_time_calculation">Time Calculaition</string>
    <string name="pref_manual_tunning">Manual Tuning</string>
    
    <string name="praf_location_title">Location</string>
    <string name="pref_auto_detect_location">Auto detect location</string>
    <string name="pref_auto_detect_location_summary">Use current location automatically</string>
	
    <string name="pref_on_prayer">On Prayer</string>
    <string name="pref_before_prayer">Before Prayer</string>
    <string name="pref_alarm">Alarm</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_notify_before">Notify before</string>
    
    <string name="default_notify_before" translatable="false">5</string>
    <string name="default_alarm" translatable="false">azan1</string>
    <string name="default_manual_tume" translatable="false">0.5</string>
    
    <string name="pref_minutes">Mins</string>
    <string name="pref_hours">Hours</string>
    <string name="left_until">left until</string>
    
    <string name="notification_setup_title">%1$s Notification Setup</string>
    
    <!-- Notification -->
    <string name="notif_on_prayer">It\'s time to pray</string>
    <string name="notif_before_pray">minutes to pray</string>
    <string name="notif_title">Prayer Time</string>
    
    <string name="notif_dismiss">Dismiss</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="compass_title">Qibla Direction</string>
    <string name="mosque_finder_title">Mosque Finder</string>
    <string name="self_evaluation_title">Self evaluation</string>

    <string name="message_title">Message:</string>
    <string name="repeat_title">Repeat:</string>
    <string name="set_reminder_tone_title">Set reminder tone</string>

    <string name="reminder_message_hint">Reminder message</string>
    <string name="reminder_time_hint">Reminder time</string>
    <string name="reminder_tone_hint">Reminder tone</string>
    <string name="save_label">Save</string>
    <string name="add_new_evaluation_reminder">New Reminder</string>
    <string name="edit_evaluation_reminder">Edit Reminder</string>
    <string name="progress">Progress</string>
    <string name="new_goal">New Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="north">North</string>
    <string name="qibla">Qibla</string>
    <string name="from">from</string>
    <string name="degrees">50&#xb0;</string>
    <string name="no_network_alert">No network available</string>
    <string name="gps_not_available_alert">Turn On Location Service to allow Apps to determine your location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove">Remove</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_startdate">Sort by start date</string>
    <string name="dashboard">Dashboard</string>
    <string name="dailydoa">Daily Doa</string>
</resources>
